k8s/apps/authentik/02-allow-ingress-external.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-ingress-external
  namespace: authentik
spec:
    podSelector:
      matchLabels:
        app.kubernetes.io/name: authentik
        app.kubernetes.io/instance: authentik
        component: server
  policyTypes:
  - Ingress
  ingress:
  - from:
    - ipBlock:
        cidr: 0.0.0.0/0
    ports:
    - protocol: TCP\n      port: 9000\n
